# MPEG-EVC-ETM

./: .gitlab-ci.yml  CMakeLists.txt  COPYING  README.md
app/: CMakeLists.txt  evca_args.h  evca_bitstream_merge.c  evca_decoder.c  evca_encoder.c  evca_util.h
build_old/linux/: Makefile
build_old/windows/: evc_decoder_lib_vs2013.vcxproj  evc_encoder_lib_vs2015.vcxproj  evc_encoder_lib_vs2017.vcxproj  evc_lib_vs2013.sln  evc_lib_vs2015.sln  evc_lib_vs2017.vcxproj  evca_bitstream_merge_vs2013.vcxproj  evca_decoder_vs2015.vcxproj  evca_encoder_vs2013.vcxproj  evca_encoder_vs2015.vcxproj
cfg/: encoder_lowdelay.cfg  encoder_lowdelay_P.cfg  encoder_lowdelay_P_baseline.cfg  encoder_lowdelay_baseline.cfg  encoder_randomaccess.cfg  encoder_randomaccess_baseline.cfg  encoder_randomaccess_baseline_gop32_tf.cfg  encoder_randomaccess_gop32_tf.cfg  encoder_still_pic.cfg  encoder_still_pic_baseline.cfg
cfg/per-class/: classS.cfg
cfg/per-class/classH1/: thisTestDRA.cfg
inc/: evc.h
src/: AdaptiveLoopFilter.cpp  AdaptiveLoopFilter.h  Buffer.cpp  Buffer.h  CMakeLists.txt  EncAdaptiveLoopFilter.cpp  EncAdaptiveLoopFilter.h  enc_alf_wrapper.h  evc.c  evc_alf.c  evc_alf.h  evc_debug.c  evc_debug.h  evc_def.h  evc_df.c  evc_df.h  evc_dra.c  evc_dra.h  evc_img.c  evc_img.h  evc_ipred.c  evc_ipred.h  evc_itdq.c  evc_itdq.h  evc_mc.c  evc_mc.h  evc_picman.c  evc_picman.h  evc_port.h  evc_recon.c  evc_recon.h  evc_tbl.c  evc_tbl.h  evc_util.c  evc_util.h  evcd.c  evcd_bsr.c  evcd_bsr.h  evcd_def.h  evcd_eco.c  (+29 more)
